--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">UniversityTest2</string>
+    <string name="app_name">Nigeria Universities Directory</string>
     <string-array name="filter">
         <item>State</item>
         <item>GeoPoliticalZone</item>
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="private_universities">PRIVATE UNIVERSITIES</string>
 </resources>
